--- a/README
+++ b/README
@@ -1,3 +1,12 @@
-PCA.html  使用浏览器打开
-PCA.ipynb  使用Anaconda的jupyter notebook打开
-注：如果暂时不会，推荐使用如上打开方式，两个文件内容相同）
+PCA         Principal Components Analysis  主成分分析
+
+PCA.html    下载后，使用浏览器打开
+PCA.ipynb   下载后，使用Anaconda的jupyter notebook打开
+
+注：
+如果暂时不会使用jupyter notebook，推荐使用浏览器打开PCA.html
+两个文件内容相同，只是PCA.ipynb可以实际运行代码，交互性好。
+
+PCA.py    python源程序
+
+如果有任何问题，都可以微信联系我。
