--- a/README
+++ b/README
@@ -1,5 +1,22 @@
+本部分材料主要目的在于展示一个《线性代数与几何》这门基础课程的一个重要应用，让大家体会一下数学基础理论的巨大能量。
+
+===========================================================================================================
 PCA         Principal Components Analysis  主成分分析
 
+PCA是一种重要的机器学习(人工智能)方法，是处理大规模数据(所谓的大数据)的重要技术。
+PCA实质上是一种寻找最优坐标轴的计算方法，可以编程应用计算机自动计算，因此应用广泛。
+所谓的主成分，其实是选取最主要的坐标轴，省略次要的坐标轴。(抓住主要矛盾)。
+所谓的主要和次要，其评价依据为坐标轴(特征向量)对应的特征值大小。特征值最大，则最主要；特征值最小，则最次要。
+
+PCA方法固然很妙，但是PCA并非万能方法。
+PCA方法凑效有一个前提：的确存在某一个或者某几个(高维空间)方向上面，数据分布比较广，即方差大。
+数据本质上的确存在这样的一个或者多个方向，同时手工确定(想象一下大规模数据)又是不可能的，而且手工确定有主观因素影响，那怎么办呢？
+PCA正好解决这两个问题。
+如果数据在各个方向分布均匀，比如，假设二维数据分布呈圆形，那么其实没有必要应用PCA分析。
+
+============
+材料介绍
+============
 PCA.html    下载后，使用浏览器打开
 PCA.ipynb   下载后，使用Anaconda的jupyter notebook打开
 
